feat: 관리자 권한을 DB 조회 기반으로 인가하도록 구성